--- a/_includes/themes/twitter-alt/default.html
+++ b/_includes/themes/twitter-alt/default.html
@@ -39,19 +39,29 @@
       </div>
     </div>
 
-    <div class="container">
+	<div class="sidebar-wrapper">
+	  <ul class="sidebar-nav">
+	    <li><a href="{{ HOME_PATH }}">Home</a></li>
+		<li><a href="{{ HOME_PATH }}/about/">About me</a></li>
+		{% if site.author.resume %}<li><a href="{{ HOME_PATH }}/{{ site.author.resume }}">Resume</a></li>{% endif %}
 
+		<li><a href="mailto:{{ site.author.email }}">{{ site.author.email }}</a></li>
+		<li><a href="https://github.com/{{ site.author.github }}">@{{ site.author.github }}</a></li>
+		<li><a href="https://twitter.com/{{ site.author.twitter }}">@{{ site.author.twitter }}</a></li>
+	  </ul>
+	</div>
+
+    <div class="container">
       <div class="content">
         {{ content }}
       </div>
 
       <footer>
-        <p>&copy; {{ site.author.name }} 2012 
-          with help from <a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>
+        <p>&copy; {{ site.author.name }} 2014.<br />
+          Powered by<a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>
           and <a href="http://twitter.github.com/bootstrap/" target="_blank">Twitter Bootstrap</a>
         </p>
       </footer>
-
     </div> <!-- /container -->
 
     {% include JB/analytics %}
