--- a/_includes/themes/twitter-alt/default.html
+++ b/_includes/themes/twitter-alt/default.html
@@ -26,18 +26,18 @@
 
   <body>
 
-    <div class="topbar">
-      <div class="fill">
-        <div class="container">
+    <nav class="navbar navbar-default" role="navigation">
+      <div class="container-fluid">
+        <div class="navbar-header">
           <a class="brand" href="{{ HOME_PATH }}">{{ site.title }}</a>
-          <ul class="nav">
+        </div>
+		<ul class="nav navbar-nav navbar-right">
             {% assign pages_list = site.pages %}
             {% assign group = 'navigation' %}
             {% include JB/pages_list %}
-          </ul>
-        </div>
+        </ul>
       </div>
-    </div>
+    </nav>
 
 	<div class="sidebar-wrapper">
 	  <ul class="sidebar-nav">
