--- a/_includes/themes/twitter-alt/default.html
+++ b/_includes/themes/twitter-alt/default.html
@@ -26,7 +26,7 @@
 
   <body>
     <nav class="navbar navbar-default" role="navigation">
-      <div class="container-fluid">
+      <div class="container-fluid container-narrow">
         <div class="navbar-header">
           <a class="navbar-brand" href="{{ HOME_PATH }}">{{ site.title }}</a>
         </div>
