--- a/assets/themes/twitter-alt/css/style.css
+++ b/assets/themes/twitter-alt/css/style.css
@@ -6,8 +6,13 @@ html, body {
 .container > footer p {
   text-align: center; /* center align it with the container */
 }
+
 .container {
   width: 820px; /* downsize our container to make the content feel a bit tighter and more cohesive. NOTE: this removes two full columns from the grid, meaning you only go to 14 columns and not 16. */
+}
+
+.container-narrow {
+  max-width: 700px;
 }
 
 /* The white background content wrapper */
@@ -29,11 +34,6 @@ html, body {
   padding: 20px 20px 10px;
   margin: -20px -20px 20px;
 }
-
-.topbar .btn {
-  border: 0;
-}
-
 
 /* tag_box ======================================================== */
 
