--- a/_includes/themes/twitter-alt/post.html
+++ b/_includes/themes/twitter-alt/post.html
@@ -1,12 +1,26 @@
 <div class="page-header">
-  <h1>{{ page.title }} <small>Supporting tagline</small></h1>
+  <div class="date">
+  	<span>{{ page.date | date_to_long_string }}</span>
+  </div>
+  <h1>{{ page.title }}</h1>
 </div>
 
 <div class="row">
-  <div class="span10">
+  <div class="col-md-12">
     {{ content }}
     <hr>
-    <div class="pagination">
+    
+	{% unless page.tags == empty %}
+    <div>
+      <h4>Tags</h4>
+      <ul class="tag_box">
+      {% assign tags_list = page.tags %}
+      {% include JB/tags_list %}
+      </ul>
+    </div>
+    {% endunless %}  
+    
+	<div class="pagination">
       <ul>
       {% if page.previous %}
         <li class="prev"><a href="{{ BASE_PATH }}{{ page.previous.url }}" title="{{ page.previous.title }}">&larr; Previous</a></li>
@@ -24,17 +38,5 @@
     <hr>
     {% include JB/comments %}
   </div>
-  
-  <div class="span4">
-    <h4>Published</h4>
-    <div class="date"><span>{{ page.date | date_to_long_string }}</span></div>
-
-  {% unless page.tags == empty %}
-    <h4>Tags</h4>
-    <ul class="tag_box">
-    {% assign tags_list = page.tags %}
-    {% include JB/tags_list %}
-    </ul>
-  {% endunless %}  
-  </div>
 </div>
+
