--- a/_includes/themes/twitter-alt/default.html
+++ b/_includes/themes/twitter-alt/default.html
@@ -26,20 +26,24 @@
 
   <body>
     <nav class="navbar navbar-default" role="navigation">
-      <div class="container-fluid container-narrow">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="{{ HOME_PATH }}">{{ site.title }}</a>
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-md-11 col-md-offset-1">
+            <div class="navbar-header">
+              <a class="navbar-brand" href="{{ HOME_PATH }}">{{ site.title }}</a>
+            </div>
+            <ul class="nav navbar-nav navbar-right">
+                {% assign pages_list = site.pages %}
+                {% assign group = 'navigation' %}
+                {% include JB/pages_list %}
+            </ul>
+          </div>
         </div>
-		    <ul class="nav navbar-nav navbar-right">
-            {% assign pages_list = site.pages %}
-            {% assign group = 'navigation' %}
-            {% include JB/pages_list %}
-        </ul>
       </div>
     </nav>
 	
     <div class="row">
-      <div class="sidebar-wrapper col-md-3">
+      <div class="sidebar-wrapper col-md-2 col-md-offset-1">
         <ul class="sidebar-nav list-unstyled">
           <li>
           <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
@@ -69,10 +73,12 @@
         </ul>
       </div>
 
-      <div class="container col-md-9">
+      <div class="container col-md-8">
         <div class="content">
           {{ content }}
         </div>
+		
+		<hr />
 
         <footer>
           <p>&copy; {{ site.author.name }} 2014.<br />
