--- a/_includes/themes/twitter-alt/default.html
+++ b/_includes/themes/twitter-alt/default.html
@@ -12,8 +12,9 @@
     <![endif]-->
 
     <!-- Le styles -->
-    <link href="{{ ASSET_PATH }}/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{{ ASSET_PATH }}/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="{{ ASSET_PATH }}/css/style.css?body=1" rel="stylesheet" type="text/css" media="all">
+    <link href="{{ ASSET_PATH }}/css/sidebar.css" rel="stylesheet" type="text/css" media="all">
 
     <!-- Le fav and touch icons -->
   <!-- Update these with your own images
@@ -25,25 +26,8 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-default" role="navigation">
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-md-10 col-md-offset-1">
-            <div class="navbar-header">
-              <a class="navbar-brand" href="{{ BASE_PATH }}">{{ site.title }}</a>
-            </div>
-            <ul class="nav navbar-nav navbar-right">
-                {% assign pages_list = site.pages %}
-                {% assign group = 'navigation' %}
-                {% include JB/pages_list %}
-            </ul>
-          </div>
-        </div>
-      </div>
-    </nav>
-	
-    <div class="row">
-      <div class="sidebar-wrapper col-md-2 col-md-offset-1">
+    <div id="wrapper">
+      <div class="sidebar-wrapper">
         <ul class="sidebar-nav list-unstyled">
           <li>
           <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
@@ -73,22 +57,38 @@
         </ul>
       </div>
 
-      <div class="container col-md-8">
-        <div class="content">
-          {{ content }}
-        </div>
-		
-		<hr />
+      <div id="page-content-wrapper">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-md-12">
+              <nav class="navbar navbar-default" role="navigation">
+                <div class="navbar-header">
+                  <a class="navbar-brand" href="{{ BASE_PATH }}">{{ site.title }}</a>
+                </div>
+                <ul class="nav navbar-nav navbar-right">
+                    {% assign pages_list = site.pages %}
+                    {% assign group = 'navigation' %}
+                    {% include JB/pages_list %}
+                </ul>
+              </nav>
+    
+              <div class="content">
+                {{ content }}
+              </div>
+          
+              <hr />
 
-        <footer>
-          <p>&copy; {{ site.author.name }} 2014.<br />
-            Powered by <a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>
-            and <a href="http://twitter.github.com/bootstrap/" target="_blank">Twitter Bootstrap</a>.
-          </p>
-        </footer>
-      </div> <!-- /container -->
-    </div>
-  
+              <footer>
+                <p>&copy; {{ site.author.name }} 2014.<br />
+                  Powered by <a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>
+                  and <a href="http://twitter.github.com/bootstrap/" target="_blank">Twitter Bootstrap</a>.
+                </p>
+              </footer>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div> 
     {% include JB/analytics %}
   </body>
 </html>
