--- a/_includes/themes/twitter-alt/default.html
+++ b/_includes/themes/twitter-alt/default.html
@@ -16,6 +16,12 @@
     <link href="{{ ASSET_PATH }}/css/style.css?body=1" rel="stylesheet" type="text/css" media="all">
     <link href="{{ ASSET_PATH }}/css/sidebar.css" rel="stylesheet" type="text/css" media="all">
 
+    <!-- jQuery -->
+    <script async src="js/jquery.js"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script async src="js/bootstrap.min.js"></script>
+
     <!-- Le fav and touch icons -->
   <!-- Update these with your own images
     <link rel="shortcut icon" href="images/favicon.ico">
