--- a/_includes/themes/twitter-alt/default.html
+++ b/_includes/themes/twitter-alt/default.html
@@ -17,10 +17,10 @@
     <link href="{{ ASSET_PATH }}/css/sidebar.css" rel="stylesheet" type="text/css" media="all">
 
     <!-- jQuery -->
-    <script async src="js/jquery.js"></script>
+    <script async src="{{ ASSET_PATH }}/js/jquery.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script async src="js/bootstrap.min.js"></script>
+    <script async src="{{ ASSET_PATH }}/js/bootstrap.min.js"></script>
 
     <!-- Le fav and touch icons -->
   <!-- Update these with your own images
