--- a/_includes/themes/twitter-alt/default.html
+++ b/_includes/themes/twitter-alt/default.html
@@ -33,7 +33,7 @@
 
   <body>
     <div id="wrapper">
-      <div class="sidebar-wrapper">
+      <div id="sidebar-wrapper">
         <ul class="sidebar-nav list-unstyled">
           <li>
           <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
