fixes to nav bar

--- a/_includes/themes/twitter-alt/default.html
+++ b/_includes/themes/twitter-alt/default.html
@@ -37,7 +37,7 @@
         <ul class="sidebar-nav list-unstyled">
           <li>
           <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
-          <a href="{{ BASE_PATH }}">Home</a>
+          <a href="{{ BASE_PATH }}/">Home</a>
         </li>
         <li>
           <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
@@ -66,7 +66,7 @@
       <div id="page-content-wrapper">
         <div class="container-fluid">
           <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-10 col-md-offset-1">
               <nav class="navbar navbar-default" role="navigation">
                 <div class="navbar-header">
                   <a class="navbar-brand" href="{{ BASE_PATH }}">{{ site.title }}</a>
@@ -84,10 +84,10 @@
           
               <hr />
 
-              <footer>
-                <p>&copy; {{ site.author.name }} 2014.<br />
-                  Powered by <a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>
-                  and <a href="http://twitter.github.com/bootstrap/" target="_blank">Twitter Bootstrap</a>.
+              <footer class="text-center">
+                <p>Copyright &copy; {{ site.author.name }} 2014.
+				   <br />
+				   Powered by <a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a> and <a href="http://twitter.github.com/bootstrap/" target="_blank">Twitter Bootstrap</a>.
                 </p>
               </footer>
             </div>
