--- a/_includes/themes/twitter-alt/default.html
+++ b/_includes/themes/twitter-alt/default.html
@@ -15,6 +15,9 @@
     <link href="{{ ASSET_PATH }}/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="{{ ASSET_PATH }}/css/style.css?body=1" rel="stylesheet" type="text/css" media="all">
     <link href="{{ ASSET_PATH }}/css/sidebar.css" rel="stylesheet" type="text/css" media="all">
+    <link href="{{ ASSET_PATH }}/css/font-awesome.min.css" rel='stylesheet' type='text/css'>
+    
+    <link href='//fonts.googleapis.com/css?family=Nunito:300' rel='stylesheet' type='text/css'>
 
     <!-- jQuery -->
     <script async src="{{ ASSET_PATH }}/js/jquery.js"></script>
@@ -34,7 +37,7 @@
   <body>
     <div id="wrapper">
       <div id="sidebar-wrapper">
-        <ul class="sidebar-nav list-unstyled">
+        <ul class="list-unstyled">
           <li>
           <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
           <a href="{{ BASE_PATH }}/">Home</a>
