--- a/_includes/themes/twitter-alt/default.html
+++ b/_includes/themes/twitter-alt/default.html
@@ -15,7 +15,7 @@
     <link href="{{ ASSET_PATH }}/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="{{ ASSET_PATH }}/css/style.css?body=1" rel="stylesheet" type="text/css" media="all">
     <link href="{{ ASSET_PATH }}/css/sidebar.css" rel="stylesheet" type="text/css" media="all">
-    <link href="{{ ASSET_PATH }}/css/font-awesome.min.css" rel='stylesheet' type='text/css'>
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel='stylesheet' type='text/css'>
     
     <link href='//fonts.googleapis.com/css?family=Nunito:300' rel='stylesheet' type='text/css'>
 
@@ -42,10 +42,11 @@
           <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
           <a href="{{ BASE_PATH }}/">Home</a>
         </li>
-        <li>
+        
+        {% if site.author.about %}<li>
           <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
           <a href="{{ BASE_PATH }}/about/">About me</a>
-        </li>
+        </li>{% endif %}
         {% if site.author.resume %}<li>
           <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
           <a href="{{ BASE_PATH }}/{{ site.author.resume }}">Resume</a>
@@ -57,7 +58,7 @@
         </li>
         <li>
           <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
-          <a href="https://github.com/{{ site.author.github }}">@{{ site.author.github }}</a>
+          <a href="https://github.com/{{ site.author.github }}">github.com/{{ site.author.github }}</a>
         </li>
         <li>
           <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
