--- a/assets/themes/twitter-alt/css/style.css
+++ b/assets/themes/twitter-alt/css/style.css
@@ -32,7 +32,7 @@ html, body {
 }
 
 #sidebar-wrapper {
-  background-color: rgb(0, 0, 0, 0);
+  background-color: rgba(0, 0, 0, 0);
   text-indent: 20px;
 }
 
