some more fixes

--- a/assets/themes/twitter-alt/css/style.css
+++ b/assets/themes/twitter-alt/css/style.css
@@ -33,6 +33,7 @@ html, body {
 
 #sidebar-wrapper {
   text-indent: 20px;
+  padding-top: 20px;
 }
 
 /* tag_box ======================================================== */
