resume relative to BASE_PATH

--- a/_includes/themes/twitter-alt/default.html
+++ b/_includes/themes/twitter-alt/default.html
@@ -53,7 +53,7 @@
           {% if site.author.resume %}
           <li>
             <span class="fa fa-file-text-o" aria-hidden="true"></span>
-            <a href="{{ ASSET_PATH }}/{{ site.author.resume }}">Resume</a>
+            <a href="{{ BASE_PATH }}/{{ site.author.resume }}">Resume</a>
           </li>
           {% endif %}
 
