--- a/_includes/themes/twitter-alt/page.html
+++ b/_includes/themes/twitter-alt/page.html
@@ -1,6 +1,8 @@
+{% if page.title %}
 <div class="page-header">
   <h1>{{ page.title }}</h1>
 </div>
+{% endif %}
 
 <div class="row">
   <div class="col-md-12">
