don't hardcode my name into the rss feed titles...

--- a/_includes/themes/twitter-alt/default.html
+++ b/_includes/themes/twitter-alt/default.html
@@ -27,8 +27,8 @@
     <link rel="shortcut icon" href="/images/favicon.ico" />
 
 	<!-- RSS links for autodiscovery -->
-	<link rel="alternate" type="application/rss+xml" title="Will Brannon" href="{{ BASE_PATH}}/rss.xml" />
-	<link rel="alternate" type="application/rss+xml" title="Will Brannon" href="{{ BASE_PATH}}/atom.xml" />
+	<link rel="alternate" type="application/rss+xml" title="{{ site.author.name }}" href="{{ BASE_PATH}}/rss.xml" />
+	<link rel="alternate" type="application/rss+xml" title="{{ site.author.name }}" href="{{ BASE_PATH}}/atom.xml" />
   </head>
 
   <body>
